--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "eroica"
 version = "0.1.0"
 authors = [ "Jayakiran Akurathi <Jayakiran.Akurathi@gmail.com>" ]
+edition = "2018"
 
 [dependencies]
 rand = "*"
