--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: rust
 rust:
   - nightly
 script:
-  - travis_wait cargo build --verbose
-  - travis_wait cargo test --verbose
+  - travis_wait cargo build --release
+  - travis_wait cargo test --release -- --nocapture
